<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Learning</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Frases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Cores</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Números</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Membros da Família</string>
</resources>
